...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plan_nav_title"
        app:layout_constraintTop_toBottomOf="@+id/plan_nav_title" />


    <Button
        android:id="@+id/button"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onGoBackClicked"
        android:text="Go Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_in_list"
        android:layout_width="80dp"
        android:layout_height="64dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_action_next"
        android:onClick="onNextClicked"
...
